[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/levels/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://src/objects/Camera.tscn" type="PackedScene" id=2]

[node name="MainMenu" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -51.5
margin_top = -34.0
margin_right = 51.5
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 103.0
margin_bottom = 20.0
text = "Start"

[node name="Resolution" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 103.0
margin_bottom = 44.0
text = "Resolution: x2"

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 103.0
margin_bottom = 68.0
text = "Exit"

[node name="Ð¡amera" parent="." instance=ExtResource( 2 )]
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Resolution" to="." method="_on_resolution_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
